--- a/index.html
+++ b/index.html
@@ -4,16 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
     <header>
-
+        <nav>
+            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+            <ul>
+                <li>
+                    <a href="#" target="_blank">Protfolio</a>
+                </li>
+                <li>
+                    <a href="#" target="_blank">Blog</a>
+                </li>
+                <li>
+                    <a href=""><button>Hire Me</button></a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
