--- a/index.html
+++ b/index.html
@@ -7,21 +7,33 @@
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
-            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+            <h3 class="nav-title .dark-1">Ma<span class="text-primary">r</span>y</h3>
             <ul>
                 <li>
-                    <a href="#" target="_blank">Protfolio</a>
+                    <a class=".dark-2" href="#" target="_blank">Protfolio</a>
                 </li>
                 <li>
-                    <a href="#" target="_blank">Blog</a>
+                    <a class=".dark-2" href="#" target="_blank">Blog</a>
                 </li>
                 <li>
-                    <a href=""><button>Hire Me</button></a>
+                    <a href=""><button class="btn-primary">Hire Me</button></a>
                 </li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h4 class="banner-greetings dark-2">Hi, I am</h4>
+                <h1 class="banner-title dark-1">Mary Hardy</h1>
+                <p class="banner-description dark-3">
+                    Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
+                </p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img class="banner-profile-pic" src="./images/hardy.png" alt="">
+        </div>
     </header>
     <main>
 
