--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header secondary-bg">
         <nav>
             <h3 class="nav-title .dark-1">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -30,13 +30,37 @@
                     Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
                 </p>
                 <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary contact-btn">Contact</button>
             </div>
             <img class="banner-profile-pic" src="./images/hardy.png" alt="">
         </div>
     </header>
     <main>
-
+        <section class="about secondary-bg">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">
+                I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
+            </p>
+            <div class="about-info">
+                <!-- .about-item*4>p.item-title+p.item-description -->
+                <div class="about-item">
+                    <p class="item-title">Name:</p>
+                    <p class="item-description">Mary Hardy</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Email:</p>
+                    <p class="item-description">hardy@gmail.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Date of:</p>
+                    <p class="item-description">11 November 1987</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Form</p>
+                    <p class="item-description">Los Angeles, USA</p>
+                </div>                
+            </div>
+        </section>
     </main>
     <footer>
 
