--- a/index.html
+++ b/index.html
@@ -1,69 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="./CSS/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./CSS/style.css" />
+  </head>
+  <body>
     <header class="header secondary-bg">
-        <nav>
-            <h3 class="nav-title .dark-1">Ma<span class="text-primary">r</span>y</h3>
-            <ul>
-                <li>
-                    <a class=".dark-2" href="#" target="_blank">Protfolio</a>
-                </li>
-                <li>
-                    <a class=".dark-2" href="#" target="_blank">Blog</a>
-                </li>
-                <li>
-                    <a href=""><button class="btn-primary">Hire Me</button></a>
-                </li>
-            </ul>
-        </nav>
-        <div class="banner">
-            <div class="banner-content">
-                <h4 class="banner-greetings dark-2">Hi, I am</h4>
-                <h1 class="banner-title dark-1">Mary Hardy</h1>
-                <p class="banner-description dark-3">
-                    Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
-                </p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary contact-btn">Contact</button>
-            </div>
-            <img class="banner-profile-pic" src="./images/hardy.png" alt="">
+      <nav>
+        <h3 class="nav-title .dark-1">
+          Ma<span class="text-primary">r</span>y
+        </h3>
+        <ul>
+          <li>
+            <a class=".dark-2" href="#" target="_blank">Protfolio</a>
+          </li>
+          <li>
+            <a class=".dark-2" href="#" target="_blank">Blog</a>
+          </li>
+          <li>
+            <a href=""><button class="btn-primary">Hire Me</button></a>
+          </li>
+        </ul>
+      </nav>
+      <div class="banner">
+        <div class="banner-content">
+          <h4 class="banner-greetings dark-2">Hi, I am</h4>
+          <h1 class="banner-title dark-1">Mary Hardy</h1>
+          <p class="banner-description dark-3">
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
+          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary contact-btn">Contact</button>
         </div>
+        <img class="banner-profile-pic" src="./images/hardy.png" alt="" />
+      </div>
     </header>
     <main>
-        <section class="about secondary-bg">
-            <h3 class="section-title">About Me</h3>
-            <p class="section-description">
-                I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
-            </p>
-            <div class="about-info">
-                <!-- .about-item*4>p.item-title+p.item-description -->
-                <div class="about-item">
-                    <p class="item-title">Name:</p>
-                    <p class="item-description">Mary Hardy</p>
-                </div>
-                <div class="about-item">
-                    <p class="item-title">Email:</p>
-                    <p class="item-description">hardy@gmail.com</p>
-                </div>
-                <div class="about-item">
-                    <p class="item-title">Date of:</p>
-                    <p class="item-description">11 November 1987</p>
-                </div>
-                <div class="about-item">
-                    <p class="item-title">Form</p>
-                    <p class="item-description">Los Angeles, USA</p>
-                </div>                
-            </div>
-        </section>
-    </main>
-    <footer>
+      <!-- about section -->
+      <section class="about secondary-bg">
+        <h3 class="section-title">About Me</h3>
+        <p class="section-description">
+          I have more than 10 years experience building software for clients all
+          over the world. Below is a quick overview of my main technical skill
+          sets and technologies i use. Want to find out more about my
+          experience? Check out my online resume and project portfolio.
+        </p>
+        <div class="about-info">
+          <!-- .about-item*4>p.item-title+p.item-description -->
+          <div class="about-item">
+            <p class="item-title">Name:</p>
+            <p class="item-description">Mary Hardy</p>
+          </div>
+          <div class="about-item">
+            <p class="item-title">Email:</p>
+            <p class="item-description">hardy@gmail.com</p>
+          </div>
+          <div class="about-item">
+            <p class="item-title">Date of:</p>
+            <p class="item-description">11 November 1987</p>
+          </div>
+          <div class="about-item">
+            <p class="item-title">Form</p>
+            <p class="item-description">Los Angeles, USA</p>
+          </div>
+        </div>
+      </section>
 
-    </footer>
-</body>
+      <!-- what I Do section -->
+      <section class="skills">
+        <h3 class="section-title text-alignment">What I Do</h3>
+        <div class="skill-description-position">
+          <p class="section-description text-alignment skill-description">
+            I have more than 10 years experience building software for clients
+            all over the world. Below is a quick overview of my main technical
+            skill sets and technologies i use. Want to find out more about my
+            experience? Check out my online resume and project portfolio.
+          </p>
+        </div>
+        <div class="skill-container">
+          <!-- .about-item*4>p.item-title+p.item-description -->
+          <div class="skill-item">
+            <img src="./images/icons/js.png" alt="">
+            <h4 class="skill-item-title">Vanilla JavaScript</h4>
+            <p class="skill-item-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+          <div class="skill-item">
+            <img src="./images/icons/react.png" alt="">
+            <h4 class="skill-item-title">React</h4>
+            <p class="skill-item-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+          <div class="skill-item">
+            <img src="./images/icons/nodejs.png" alt="">
+            <h4 class="skill-item-title">Node.js</h4>
+            <p class="skill-item-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+          <div class="skill-item">
+            <img src="./images/icons/mongo.png" alt="">
+            <h4 class="skill-item-title">MongoDB</h4>
+            <p class="skill-item-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
