--- a/index.html
+++ b/index.html
@@ -83,25 +83,126 @@
         <div class="skill-container">
           <!-- .about-item*4>p.item-title+p.item-description -->
           <div class="skill-item">
-            <img src="./images/icons/js.png" alt="">
+            <img src="./images/icons/js.png" alt="" />
             <h4 class="skill-item-title">Vanilla JavaScript</h4>
-            <p class="skill-item-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            <p class="skill-item-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
           </div>
           <div class="skill-item">
-            <img src="./images/icons/react.png" alt="">
+            <img src="./images/icons/react.png" alt="" />
             <h4 class="skill-item-title">React</h4>
-            <p class="skill-item-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            <p class="skill-item-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
           </div>
           <div class="skill-item">
-            <img src="./images/icons/nodejs.png" alt="">
+            <img src="./images/icons/nodejs.png" alt="" />
             <h4 class="skill-item-title">Node.js</h4>
-            <p class="skill-item-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            <p class="skill-item-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
           </div>
           <div class="skill-item">
-            <img src="./images/icons/mongo.png" alt="">
+            <img src="./images/icons/mongo.png" alt="" />
             <h4 class="skill-item-title">MongoDB</h4>
-            <p class="skill-item-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            <p class="skill-item-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
           </div>
+        </div>
+      </section>
+
+      <!-- resume section -->
+      <section class="resume">
+        <h3 class="section-title text-alignment">A summary of My Resume</h3>
+        <div class="resume-container">
+          <!-- education column -->
+          <div class="resume-column">
+            <h3 class="resume-column-title">My Education</h3>
+            <div class="experience">
+              <h4 class="experience-title">Master in Computer Engineering</h4>
+              <h5 class="experience-sub-title">
+                Harvard University / 2015 - 2017
+              </h5>
+              <p class="experience-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr class=".hr-color">
+            <div class="experience">
+              <h4 class="experience-title">Master in Computer Engineering</h4>
+              <h5 class="experience-sub-title">
+                Harvard University / 2015 - 2017
+              </h5>
+              <p class="experience-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr class=".hr-color">
+            <div class="experience">
+              <h4 class="experience-title">Master in Computer Engineering</h4>
+              <h5 class="experience-sub-title">
+                Harvard University / 2015 - 2017
+              </h5>
+              <p class="experience-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+
+          <!-- experience column -->
+          <div class="resume-column">
+            <h3 class="resume-column-title">My Experience</h3>
+            <div class="experience">
+              <h4 class="experience-title">Sr. Font End Developer</h4>
+              <h5 class="experience-sub-title">Apple Inc / 2020 - Current</h5>
+              <p class="experience-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr class=".hr-color">
+            <div class="experience">
+              <h4 class="experience-title">Jr. Font End Developer</h4>
+              <h5 class="experience-sub-title">Dribbble Inc / 2018 - 2022</h5>
+              <p class="experience-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr class=".hr-color">
+            <div class="experience">
+              <h4 class="experience-title">HTML Developer</h4>
+              <h5 class="experience-sub-title">Adobe Inc / 2017 - 2018</h5>
+              <p class="experience-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- resume btn -->
+        <div class="resume-btn text-alignment">
+          <button class="btn-primary">Download CV</button>
         </div>
       </section>
     </main>
