added footer section

--- a/index.html
+++ b/index.html
@@ -199,13 +199,32 @@
             </div>
           </div>
         </div>
-
         <!-- resume btn -->
         <div class="resume-btn text-alignment">
           <button class="btn-primary">Download CV</button>
         </div>
       </section>
     </main>
-    <footer></footer>
+
+    <footer class="secondary-bg">
+      <div class="footer-column">
+        <h3 class="section-title">Lets Connect</h3>
+        <p class="connect-section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+        <div>
+          <a href="https://www.facebook.com"><img src="./images/icons/facebook.png" alt=""></a>
+          <a class="social-icon-speacing" href="https://www.instgram.com"><img src="./images/icons/insta.png" alt=""></a>
+          <a href="https://www.twitter.com"><img src="./images/icons/twitter.png" alt=""></a>
+        </div>
+      </div>
+      <div class="footer-column">
+        <h3 class="section-title">Let’s Message me</h3>
+        <form>
+          <input class="input-textarea-style" type="text" placeholder="Your name">
+          <input class="input-textarea-style" type="email" placeholder="Your email">
+          <textarea class="input-textarea-style" name="" id="" cols="30" rows="10" placeholder="Your message"></textarea>
+          <button class="btn-primary">Submit</button>
+        </form>
+      </div>
+    </footer>
   </body>
 </html>
