--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
-          <button class="btn-primary">Download CV</button>
-          <button class="btn-primary contact-btn">Contact</button>
+          <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+          <button class="btn-primary contact-btn"><i class="fa-solid fa-phone"></i> Contact</button>
         </div>
         <img class="banner-profile-pic" src="./images/hardy.png" alt="" />
       </div>
@@ -201,7 +201,7 @@
         </div>
         <!-- resume btn -->
         <div class="resume-btn text-alignment">
-          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
         </div>
       </section>
     </main>
@@ -226,5 +226,8 @@
         </form>
       </div>
     </footer>
+
+    <!-- font awesome kit -->
+    <script src="https://kit.fontawesome.com/2e243b1e3c.js" crossorigin="anonymous"></script>
   </body>
 </html>
